<resources>
    <string name="app_name">Travis AI</string>

    <string name="hint_prompt_input">Got a travel idea? I\'ll plan it for you.</string>

    <string name="label_profile">Profile</string>
    <string name="label_bonding">Bonding</string>
    <string name="label_bookmark">Bookmark</string>
    <string name="label_settings">Settings</string>
    <string name="label_home">Home</string>
    <string name="label_highlight">Highlighted in</string>
    <string name="label_more">More</string>
    <string name="label_trip_prompt">Trip Prompt</string>
    <string name="label_help_prompt_title">Prompt Example 🏖️</string>
    <string name="label_help_prompt_message">Sekarang aku lagi di <b>Yogyakarta</b> [KOTA], ingin menjelajah <b>tempat ramai</b> [PREFERENSI] dan <b>berburu barang antik</b> [KEGIATAN]. Jangan lupa, tambahkan <b>Malioboro</b> [DESTINASI] ke dalam jadwalku juga, ya.</string>
    <string name="label_ok">Okay</string>
    <string name="label_highlight_no_data">Nothing highlighted today 😴</string>
    <string name="label_tplan">Generated Travel Plan in</string>
    <string name="label_item_tplan_edit">Edit travel plan item 🏖️</string>
    <string name="label_tplan_no_data">Uh-oh, there\'s a glitch in generating your Travel Plan 😥</string>
    <string name="label_tplan_empty_destination">Please enter destination</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_edit">Edit</string>
    <string name="label_navigate">Navigate</string>
    <string name="label_price_starting">Starting from</string>
    <string name="label_service_title">Services</string>
    <string name="label_service">Leisure Services in</string>
    <string name="label_join">Join</string>
    <string name="label_bonding_header">Bonding Activities In</string>
    <string name="label_login">Login</string>
    <string name="label_signup">Signup</string>
    <string name="label_password">Password</string>
    <string name="label_email">Email</string>
    <string name="label_travis_team">Bangkit 2023</string>
    <string name="label_travis_github_org">github.com/Bangkit-C23-PS139</string>
    <string name="label_upload_photo">Upload photo</string>
    <string name="label_name">Name</string>
    <string name="label_instagram_id">Instagram ID</string>
    <string name="label_twitter_id">Twitter ID</string>
    <string name="label_youtube_id">Youtube ID</string>
    <string name="label_tiktok_id">TikTok ID</string>
    <string name="label_socmed_optional">Social Media (optional)</string>
    <string name="label_choose_preference">Please Choose Your</string>
    <string name="label_travel_preference">Travel Preference</string>
    <string name="label_menu_box">Menu Box</string>
    <string name="label_logout">Logout</string>
    <string name="label_logout_success">Successfully logged out :)</string>
    <string name="label_age">Age</string>
    <string name="label_process_success">Boom! Process completed 🎉</string>
    <string name="label_logout_already">You are not signed in!</string>
    <string name="label_retry">Retry</string>
    <string name="label_request_bonding">Request Bonding Event!</string>
    <string name="label_post_service">Post Your Service!</string>
    <string name="label_promote_highlight">Promote Your Place!</string>
    <string name="label_generate_travel_plan">Generate Travel Plan</string>
    <string name="label_bonding_join_success">Joined! Lets have fun! 🎉</string>
    <string name="label_bonding_unlink_success">Unlinked! :)</string>
    <string name="label_joined">Joined</string>
    <string name="label_user_input">User Input</string>

    <string name="arg_home_name">Hi, %s!</string>
    <string name="arg_number_overflow">%d+</string>
    <string name="arg_highlight_thumb">Thumbnail %d %s</string>
    <string name="arg_highlighted_destination">%s, highlighted destination in %s</string>

    <string name="desc_user_avatar">User avatar</string>
    <string name="desc_prompt_help">Prompt help</string>
    <string name="desc_send">Send trip prompt</string>
    <string name="desc_navigate">Navigate to destination</string>
    <string name="desc_highlighted_destination">Highlighted destination in this city</string>
    <string name="desc_destination_thumbnail">Destination thumbnail</string>
    <string name="desc_destination_photo">Destination photo</string>
    <string name="desc_back">Back</string>
    <string name="desc_item_tplan_edit">Edit Travel Plan item</string>
    <string name="desc_app_logo">Travis Mascot</string>
    <string name="desc_signup_upload_photo">Upload profile photo</string>
    <string name="desc_gender_choose">Choose gender</string>
    <string name="desc_set_travel_preference">Set Travel Preference</string>
    <string name="desc_background_yogyakarta">Background Image of Yogyakarta</string>

    <string name="default_date">Date</string>
    <string name="default_destination">Destination</string>
    <string name="default_destination_desc">Destination description</string>
    <string name="default_city_current">Current City</string>
    <string name="default_activity">Activity</string>
    <string name="default_plus">+</string>
    <string name="default_home_name">Hi, Traveler!</string>
    <string name="default_tplan_time_allocation">Time Allocation</string>
    <string name="default_description">Description</string>
    <string name="default_destination_type">Destination Type</string>
    <string name="default_price">Price</string>
    <string name="default_service_name">Service Name</string>
    <string name="default_service_provider">Service Provider</string>
    <string name="default_bonding_title">Bonding Activity</string>
    <string name="default_preference_name">Preference Item</string>

    <string name="dummy_time_allocation">09:00 – 11:00</string>
    <string name="dummy_destination_desc">Formerly this building represents the spirit of the society and the sovereign, Tugu Yogyakarta has become a historical icon of the city.</string>
    <string name="dummy_activity">Swimming</string>
    <string name="dummy_tag_overflow">9+</string>
    <string name="dummy_destination_thumb">Thumbnail Tugu Jogja</string>
    <string name="dummy_city">Yogyakarta</string>
    <string name="dummy_destination">Tugu Jogja</string>
    <string name="dummy_wa">https://wa.me/+6282123151158</string>
    <string name="dummy_name_label">Hi, Alyssa!</string>
    <string name="dummy_date_word">16 June 2023</string>
    <string name="dummy_destination_type">Monument</string>
    <string name="dummy_price_k">Rp.250K</string>
    <string name="dummy_service_provider">Dispar DIY</string>
    <string name="dummy_service_name">Naik Kuda Parangtritis</string>
    <string name="dummy_date_exact">16 Jun 23 – 09:00 AM</string>
    <string name="dummy_bonding_title">Bangkit Inauguration</string>

    <string name="err_email_invalid">Please enter a valid email address</string>
    <string name="err_password_less_8">Password must be at least 8 characters long</string>
    <string name="err_name_empty">Name can\'t be empty</string>
    <string name="err_age_empty">Age can\'t be empty</string>
    <string name="err_gender_empty">Please choose gender</string>
    <string name="err_location_self_fail">There\'s a trouble getting your location :(</string>
    <string name="err_location_permission_missing">We need permission to run the app :(</string>
    <string name="err_preferences_empty">Please choose at least 1 Travel Preferences :)</string>
    <string name="err_bonding_already_join">User already exists in this activity</string>
    <string name="err_bad_request">Bad Request</string>

    <string name="info_city_unavailable">Your city is still unavailable. We\'re showing Yogyakarta instead 🙂\n(currently only Yogyakarta &amp; Jakarta Pusat is available)</string>

    <!-- Signup Gender -->
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>