<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rickyslash.travis.ui.home.HomeFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_meet"
        android:name="com.rickyslash.travis.ui.dashboard.DashboardFragment"
        android:label="@string/label_meet"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.rickyslash.travis.ui.notifications.NotificationsFragment"
        android:label="@string/label_bookmark"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.rickyslash.travis.ProfileFragment"
        android:label="@string/label_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>