<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mcv_item_plan"
    style="@style/CardViewTransContainer"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_marginBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_item_tplan"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_item_tplan_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_item_tplan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_destination_photo"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_item_tplan_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/mcv_item_tplan_img"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_item_tplan_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_item_tplan_info_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/ll_item_tplan_info_header"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_item_tplan_edit"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/tv_item_tplan_time"
                            style="@style/TextViewCardLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_tplan_time_allocation"
                            android:textStyle="bold"
                            tools:text="@string/dummy_time_allocation" />

                        <TextView
                            android:id="@+id/tv_item_tplan_title"
                            style="@style/TextViewCardTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/default_destination"
                            tools:text="@string/dummy_destination" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/btn_item_tplan_edit"
                        style="@style/ImageButtonRoundNoText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/desc_item_tplan_edit"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/round_edit_location_alt_24" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_item_tplan_desc"
                    style="@style/TextViewCardDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/default_destination_desc"
                    tools:text="@string/dummy_destination_desc" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>