<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    android:paddingTop="32dp"
    tools:background="@color/yellow_F7D44C"
    tools:context=".ui.main.pages.service.ServiceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_service_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_header_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mcv_service_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_service_header_label"
                style="@style/TextViewHeaderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_service" />

            <TextView
                android:id="@+id/tv_service_header_title"
                style="@style/TextViewHeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_city_current"
                tools:text="@string/dummy_city" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_service_avatar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="?attr/colorOnTertiaryFixed"
            app:strokeWidth="1dp">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_user_avatar"
                android:maxWidth="64dp"
                android:maxHeight="64dp"
                android:src="@drawable/dummy_home_upload" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_service_request"
        style="@style/ButtonMaterialRegularTransparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_post_service"
        app:icon="@drawable/ic_baseline_whatsapp_24"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="@+id/cl_service_header"
        app:layout_constraintStart_toStartOf="@+id/cl_service_header"
        app:layout_constraintTop_toBottomOf="@+id/cl_service_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_service"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_service_request"
        tools:listitem="@layout/item_service" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="?attr/colorOnPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>